--- a/package.json
+++ b/package.json
@@ -10,15 +10,24 @@
     "test": "jest"
   },
   "dependencies": {
+    "@mui/material": "^5.12.2",
     "@react-native-firebase/app": "^17.3.1",
     "@react-native-firebase/database": "^17.3.1",
     "@react-navigation/bottom-tabs": "^6.5.5",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
+    "@thevsstech/react-native-skeleton": "^2.0.11",
+    "firebase": "^9.18.0",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.20.0"
+    "react-native-screens": "^3.20.0",
+    "react-native-svg": "^13.9.0",
+    "react-native-svg-charts": "^5.4.0",
+    "victory-native": "^36.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
