--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@mui/material": "^5.12.2",
     "@react-native-firebase/app": "^17.3.1",
     "@react-native-firebase/database": "^17.3.1",
@@ -20,6 +24,7 @@
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-fontawesome": "^7.0.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^4.5.0",
